fix wrong position of notice checking

--- a/static/css/reservation_map_1.css
+++ b/static/css/reservation_map_1.css
@@ -150,7 +150,7 @@ input[type=date], input[type=time] {
 }
 
 .map {
-	top: 20%;
+	top: 15%;
 	position: relative;
 	z-index: 1;
 }
